# skyshell

./: LICENSE  README.md  pyproject.toml
example/: example.py
src/skyshell/: __init__.py  catalogue_helpers.py  skyplot.py  sun_moon_position.py
