[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skyshell"
version = "0.1.0"
readme = "README.rst"
authors = [
  {name = "dribeiro"}
]
license = {text = "MIT license"}
dependencies = [
  # Add your libraries here. Some typical examples:
  "astropy >= 7.1",
  "matplotlib >=3.10",
  "Cartopy >=0.25.0",
  "numpy >= 2.3.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
skyshell = ["catalogues/*.dat"]